--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
+    "framer-motion": "^10.10.0",
     "gatsby": "^5.8.1",
     "gatsby-plugin-sass": "^6.8.0",
     "react": "^18.2.0",
